# WebServer

./: .gitignore  CMakeLists.txt  LevenshteinDist.h  README.md  command.sh  compileAPI.sh  config.json  errors  hotreload.sh  lsof.sh  main.cpp  run.sh  test.db  watch.sh
.old/api/blog/: [...404].cpp  [id].cpp
.old/api/user/: index.cpp
.old/api/user/[id]/: index.cpp  username.cpp
.old/interfaceAPI/: [...404].cpp  download.cpp  json.cpp
.old/interfaceAPI/__middleware__/: authMiddleware.cpp
.old/interfaceAPI/blog/[[id]]/: [plop].cpp  image.cpp  index.cpp
.old/interfaceAPI/entity/[id]/: image.cpp  index.cpp
.old/public/: 404.html  index.html
HotReloader/: CMakeLists.txt  main.cpp  run.sh
HotReloader/src/: File.cpp  File.h  loadFiles.cpp
api/: CssBuilder.h  HtmlBuilder.h  Lexer.h  XmlParser.h  [...404].cpp  [[...index]].cpp  index.cpp  search.cpp  test.cpp  upload.cpp  video.cpp
api/[id]/: index.cpp
api/__middleware__/: jsonParserMiddleware.cpp  multipartFormdataParserMiddleware.cpp  zzz.cpp
api/blog/: [...404].cpp
api/rapidxml/: rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
api/stem/: common_lang_constants.h  english_stem.h  stemming.h
api/upload/: HtmlParser.h  PageRank.h  ParseHtmlFiles.h  index.cpp  types.h
api/user/: settings.cpp
api/user/[id]/: username.cpp
api/user/[id]/[sex]/: filter.cpp  index.cpp
app/: index.html  package.json  pnpm-lock.yaml  upload.html  video.html  vite.config.js
app/public/videos/quality/: chunk-stream0-00001.m4s  chunk-stream0-00002.m4s  chunk-stream0-00003.m4s  chunk-stream0-00004.m4s  chunk-stream0-00005.m4s  chunk-stream0-00006.m4s  chunk-stream0-00007.m4s  chunk-stream0-00008.m4s  chunk-stream0-00009.m4s  chunk-stream0-00010.m4s  chunk-stream0-00011.m4s  chunk-stream0-00012.m4s  chunk-stream0-00013.m4s  chunk-stream0-00014.m4s  chunk-stream0-00015.m4s  chunk-stream1-00001.m4s  chunk-stream1-00002.m4s  chunk-stream1-00003.m4s  chunk-stream1-00005.m4s  chunk-stream1-00006.m4s  chunk-stream1-00007.m4s  chunk-stream1-00008.m4s  chunk-stream1-00009.m4s  chunk-stream1-00011.m4s  chunk-stream1-00012.m4s  chunk-stream1-00013.m4s  chunk-stream1-00015.m4s  chunk-stream1-00018.m4s  chunk-stream1-00019.m4s  chunk-stream2-00002.m4s  (+84 more)
app/src/: main.ts  uploadFolder.ts
endpoints/: blog.cpp  index.cpp  test.cpp
endpoints/[id]/: index.cpp
endpoints/blog/: [id].cpp
endpoints/user/: index.cpp  info.cpp  settings.cpp
endpoints/user/[id]/: index.cpp  username.cpp
expressTest/: index.js
interfaceAPI/: [...404].cpp  index.cpp  json.cpp  video.cpp
interfaceAPI/__middleware__/: logMiddleware.cpp
interfaceAPI/blog/[[id]]/: [plop].cpp
interfaceAPI/entity/: [[...404]].cpp
interfaceAPI/entity/[id]/: index.cpp
interfaceAPI/user/: [[id]].cpp
public/: index.html
src/: Constants.h  CssBuilder.h  HtmlBuilder.h  HttpRequestHeader.cpp  HttpRequestHeader.h  HttpResponseHeader.cpp  HttpResponseHeader.h  HttpStatus.h  Logger.h  Middleware.h  Request.h  Response.h  Result.h  Sqlite.h  StreamFile.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Threadpool.h  utils.cpp  utils.h  xmlParser.cpp
src/TcpServerImpl/: Commands.cpp  Config.cpp  IO.cpp  Middleware.cpp  Signal.cpp  TcpServer.cpp
src/ThreadpoolImpl/: Threadpool.cpp
src/interface/: CssBuilder.cpp  HtmlBuilder.cpp  Request.cpp  Response.cpp  Sqlite.cpp
tests/: test.cpp
tests/utils/: endsWith.cpp  getContentType.cpp  getDateTime.cpp  getExtension.cpp  getMimeType.cpp  join.cpp  replace.cpp  split.cpp  startsWith.cpp  toLower.cpp  toUpper.cpp  trim.cpp
utils/: command.sh  lsof.sh  mime.txt
utils/HTMLFiles/help/: a.html  b.html  c.html
utils/HTMLFiles/htmx/: hts-log.txt  index.html
(+194 files in other folders)
